--- a/index.html
+++ b/index.html
@@ -409,8 +409,8 @@
 <div class="center-content-wrapper">
 <div class="block-card" id="blk-center-0">
 <h2 class="block-title" style="color: #FFFFFF; background-color: #397DB3; padding: 10px 15px; border-radius: 5px; text-align: center;" tabindex="-1">三多願景</h2>
-<div class="carousel-container" id="carousel-C38e06ae2" data-cols="1">
-<button type="button" class="pause-btn" onclick="togglePause('C38e06ae2')" aria-label="暫停輪播">II 暫停</button>
+<div class="carousel-container" id="carousel-Cc652d491" data-cols="1">
+<button type="button" class="pause-btn" onclick="togglePause('Cc652d491')" aria-label="暫停輪播">II 暫停</button>
 <ul class="carousel-list">
 <li class="carousel-item">
 <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; text-decoration: none; color: inherit; height: 100%;">
@@ -437,19 +437,19 @@
 </div>
 </li>
 </ul>
-<button type="button" class="control-btn prev" onclick="moveSlide(-1, 'C38e06ae2')" aria-label="上一組內容">❮</button>
-<button type="button" class="control-btn next" onclick="moveSlide(1, 'C38e06ae2')" aria-label="下一組內容">❯</button>
+<button type="button" class="control-btn prev" onclick="moveSlide(-1, 'Cc652d491')" aria-label="上一組內容">❮</button>
+<button type="button" class="control-btn next" onclick="moveSlide(1, 'Cc652d491')" aria-label="下一組內容">❯</button>
 <div class="dots-container"></div>
 </div>
-<script>document.addEventListener('DOMContentLoaded', function() { initCarousel('C38e06ae2'); });</script>
+<script>document.addEventListener('DOMContentLoaded', function() { initCarousel('Cc652d491'); });</script>
 </div>
 <div class="block-card" id="blk-center-1">
 <h2 class="block-title" style="color: #FFFFFF; background-color: #397DB3; padding: 10px 15px; border-radius: 5px; text-align: center;" tabindex="-1">公告訊息</h2>
-<iframe src="ann.html" title="公告訊息" width="100%" height="1200" style="border:none;" loading="lazy"></iframe>
+<iframe src="ann.html" title="公告訊息" width="100%" height="1100" style="border:none;" loading="lazy"></iframe>
 </div>
 <div class="block-card" id="blk-center-2">
 <h2 class="block-title" style="color: #FFFFFF; background-color: #397DB3; padding: 10px 15px; border-radius: 5px; text-align: center;" tabindex="-1">榮譽榜</h2>
-<iframe src="https://esa.ntpc.edu.tw/web-heromgt/rest/service/view/public/WVFYTWN4Zy9GRlBrTDlkSEJZUmRnakZFRVBkNlhhUXRXQzgrNmxZeUx4OD0" title="榮譽榜-新北市教育局校務行政校務榮譽榜公告，由教育局維護，若需無障礙協助請洽教育局資訊單位" width="100%" height="700" style="border:none;" loading="lazy"></iframe>
+<iframe src="honor.html" title="榮譽榜" width="100%" height="710" style="border:none;" loading="lazy"></iframe>
 </div>
 </div>
 </main>
