--- a/honor.html
+++ b/honor.html
@@ -14,27 +14,27 @@
             --border-color: #eee;
         }
 
-        /* ★ 關鍵修正 1：全域 Box Sizing，防止 Padding 撐大元素 */
+        /* 全域 Box Sizing，防止 Padding 撐大元素 */
         *, *::before, *::after {
             box-sizing: border-box;
         }
 
-        /* ★ 關鍵修正 2：Body 歸零並隱藏捲軸 */
+        /* Body 歸零並隱藏捲軸 */
         html, body {
             margin: 0;
             padding: 0;
             width: 100%;
-            overflow-x: hidden; /* 強制隱藏水平捲軸 */
+            overflow-x: hidden;
             font-family: "Microsoft JhengHei", "Heiti TC", sans-serif;
             background-color: var(--bg-color);
             color: var(--text-color);
         }
 
-        /* ★ 關鍵修正 3：新增一個容器來控制邊距，取代原本 body 的 padding */
+        /* 容器控制邊距 */
         .main-wrapper {
             padding: 10px;
             width: 100%;
-            max-width: 100vw; /* 確保不超過視窗寬度 */
+            max-width: 100vw;
         }
 
         .sr-only {
@@ -79,7 +79,7 @@
             flex-grow: 1;
             display: flex;
             flex-direction: column;
-            min-width: 0; /* 防止 Flex 子元素被長文字撐開 */
+            min-width: 0;
         }
 
         h2.honor-title {
@@ -160,10 +160,10 @@
 
         #loading { text-align: center; color: #666; padding: 20px; }
 
-        /* RWD 設定 (768px 以下自動切換) */
+        /* RWD 設定 */
         @media (max-width: 768px) {
             .honor-item {
-                flex-direction: column; /* 上下排列 */
+                flex-direction: column; 
             }
 
             .honor-img-box {
@@ -252,8 +252,9 @@
             const d = item.date;
             const dateStr = d ? `${d.substring(0,4)}-${d.substring(4,6)}-${d.substring(6,8)}` : '';
             const docNo = item.doc_no ? `文號: ${item.doc_no}` : '';
-            const clicks = `點閱數: ${item.clicks}`;
-
+            
+            // ★ 修改：移除 clicks 變數和顯示邏輯
+            
             let imgHtml = '';
             if (item.images && item.images.length > 0) {
                 imgHtml = `
@@ -284,8 +285,7 @@
                         <span class="meta-tag">${docNo}</span>
                         <span class="meta-tag">${item.dept}</span>
                         <span class="meta-tag">${dateStr}</span>
-                        <span class="meta-tag">${clicks}</span>
-                    </div>
+                        </div>
                 </div>
             `;
             listContainer.appendChild(li);
