--- a/ann.html
+++ b/ann.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>學校公告組件</title>
+    <title>學校公告</title>
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -500,4 +500,5 @@
 </script>
 
 </body>
+
 </html>
