--- a/sitemap.html
+++ b/sitemap.html
@@ -399,7 +399,7 @@
 <li>
 <a href="./#blk-center-2" class="node-link" data-title="跳至區塊：榮譽榜">榮譽榜</a>
 <ul class="sitemap-third-tree">
-<li><a href="https://esa.ntpc.edu.tw/web-heromgt/rest/service/view/public/WVFYTWN4Zy9GRlBrTDlkSEJZUmRnakZFRVBkNlhhUXRXQzgrNmxZeUx4OD0" target="_blank" class="node-sub-link" data-title="開啟嵌入內容 (另開新視窗)">開啟嵌入內容 (另開新視窗)</a></li>
+<li><a href="honor.html" target="_blank" class="node-sub-link" data-title="開啟嵌入內容 (另開新視窗)">開啟嵌入內容 (另開新視窗)</a></li>
 </ul>
 </li>
 </ul></li>
